--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.3",
     "phpunit/phpunit": "^6.0.0",
+    "squizlabs/php_codesniffer": "^2.5",
     "eaglewu/swoole-ide-helper": "dev-master"
   },
   "autoload":{
@@ -30,8 +31,20 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Surf\\Tests\\": "tests/Surf",
-      "Examples\\": "examples"
+      "Surf\\Test\\": "tests/Surf",
+      "Surf\\Examples\\": "examples"
     }
+  },
+  "scripts": {
+    "format": [
+      "@fixer"
+    ],
+    "test": [
+      "@phpunit",
+      "@phpcs"
+    ],
+    "phpunit": "vendor/bin/phpunit",
+    "phpcs": "vendor/bin/phpcs",
+    "fixer": "vendor/bin/php-cs-fixer fix ./src --rules=@PSR2"
   }
 }
