--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ php:
   - '7.1'
   - '7.2'
 
-before_script: composer install
+before_script:
+  - pecl install swoole
+  #- echo 'extension = "swoole.so"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+  - composer install
 
 script: phpunit --coverage-text
 
