--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
     "phpunit/phpunit": "^6.0.0",
     "squizlabs/php_codesniffer": "^2.5",
     "eaglewu/swoole-ide-helper": "dev-master",
-    "php-coveralls/php-coveralls": "^2.0",
-    "phpunit/phpcov": "^2.0.2"
+    "php-coveralls/php-coveralls": "^2.0"
   },
   "autoload":{
     "psr-4": {
