--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 
 script: phpunit --coverage-clover clover.xml
 
-after_success: vendor/bin/php-coveralls --coverage_clover=clover.xml
+after_success: vendor/bin/php-coveralls  -v --exclude-no-stmt -x clover.xml
 
 notifications:
   email:
