The finish session to implementation

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "vlucas/phpdotenv": "^2.4",
     "nikic/fast-route": "^1.2",
     "pimple/pimple": "^3.0",
-    "symfony/event-dispatcher": "^4.0"
+    "symfony/event-dispatcher": "^4.0",
+    "zendframework/zend-diactoros": "^1.7"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.3",
