--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,10 +9,11 @@
 
     <filter>
         <whitelist>
-            <directory>./</directory>
+            <directory>./src</directory>
             <exclude>
                 <directory>./tests</directory>
                 <directory>./vendor</directory>
+                <directory>./examples</directory>
             </exclude>
         </whitelist>
     </filter>
