--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,14 @@ php:
 
 services:
   - mysql
+  - redis-server
 
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS test;USE test;CREATE TABLE user (`id` int not null, `name` varchar(30) not null); INSERT INTO `user` (`id`, `name`) VALUES (1, "meshell");'
+
+install:
+  - tests/travis.phpredis
+  - redis-cli info |grep version
 
 before_script:
   - yes | pecl install swoole
